tests/typing/bad/testfile-override-1.scala
class A { override def m() {} }
object Main { def main(args: Array[String]) { } }
